# joulescope_driver

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  credits.html  error_code_update.py  joulescope_driver.cppcheck  pyproject.toml  requirements.txt  setup.py  version_update.py
.github/workflows/: linux_amd64.yml  macos_amd64.yml  packaging.yml  windows_amd64.yml
ci/: ci_artifact_push.py
doc/: CMakeLists.txt  Doxyfile.in  code_cleanup_plan.md  design_review_plan.md  footer.html  js220.txt  js320_cal.md  js320_fwup.md
doc/doxygen/: Doxyfile.in
doc/plans/: code_cleanup_plan.md  cross_platform_examples.md  design_review_plan.md  fuzz_session_wip_2026-04-16.md  libusb_backend_test_harness.md  linux_host_sleep_repro.md  mb_device_test_harness.md  mem_transaction_dedup.md  open_state_management.md  usb_suspend_resume_windows_macos.md  windows_fuzz_crash_investigation.md
doc/plans/completed/: check32_xxhash_dedup.md  design_review_plan.md  force_remove_repro_plan.md  fuzz_session_wip_2026-04-16.md  mb_device_genericize.md  tmap_fix.md
doc/sphinx/: c_api.rst  conf.py  driver.rst  h_cstr.rst  h_error_code.rst  h_jsdrv.rst  h_meta.rst  h_time.rst  h_topic.rst  h_union.rst  index.rst  py_api.rst  readme.md  record.rst  time64.rst
example/: CMakeLists.txt  fuzz.c
example/ecpprog/: COPYING  README.md  ecpprog.c  jtag.c  jtag.h
example/jsdrv/: capture.c  capture_viewer.py  demo.c  dev.c  hotplug.c  info.c  jsdrv.c  jsdrv_prv.h  mem_erase.c  mem_read.c  mem_write.c  reset.c  scan.c  set.c  statistics.c  stream_buffer.c  stream_watch.c  threads.c  version.c
example/minibitty/: adapter.c  adapter.h  adapter_tracy.cpp  adapter_tracy.h  boot_info.c  boot_info.h  boot_info_test.c  cal.c  firmware.c  force_remove.c  fpga_mem.c  fuzz_fwup.c  fwup.c  hotplug.c  info.c  loopback.c  main.cpp  mem.c  minibitty_exe_prv.h  power_cycle.c  publish.c  pubsub_info.c  pubsub_sniffer.c  pubsub_test.c  state_get.c  stream.c  stream_test.c  suspend_test.c  throughput.c  timesync.c  version.c
example/minibitty/tracy/: README.md  tracy.diff
example/minibitty/tracy/client/: TracyThread.hpp
example/minibitty/tracy/common/: TracySocket.cpp
include/: jsdrv.h
include/jsdrv/: cmacro_inc.h  cstr.h  error_code.h  log.h  meta.h  os_atomic.h  os_event.h  os_mutex.h  os_sem.h  os_thread.h  time.h  tmap.h  topic.h  union.h  version.h
include_private/: js220_api.h
include_private/jsdrv_prv/: assert.h  backend.h  buffer.h  buffer_signal.h  cdef.h  check32.h  dbc.h  device.h  devices.h  downsample.h  event.h  frontend.h  js110_cal.h  js110_sample_processor.h  js110_stats.h  js220_i128.h  js220_stats.h  js320_fwup.h  js320_jtag.h  js320_stats.h  json.h  list.h  log.h  mb_drv.h  meta_binary.h  msg_queue.h  mutex.h  platform.h  pubsub.h  sample_buffer_f32.h  statistics.h  thread.h  time_map_filter.h  usb_spec.h  windows.h
include_private/mb/: cdef.h  event.h  state_machine.h  stdmsg.h  timesync.h  topic.h  value.h  version.h
include_private/mb/comm/: frame.h  (+2 more)
node_api/: README.md  binding.gyp  index.js  joulescope_driver.d.ts  package-lock.json  package.json
node_api/example/: samples.js  statistics.js
node_api/lib/: binding.js
node_api/src/: addon.cc  joulescope_driver.c  joulescope_driver.cc  joulescope_driver.h
node_api/test/: test_binding.js
pyjoulescope_driver/: __init__.py  __main__.py  binding.pyx  c_jsdrv.pxd  mem_client.py  module.pxi  program.py  program_js320.py  record.py  release.py  stdmsg.py  time64.py  version.py
pyjoulescope_driver/entry_points/: __init__.py  api_timeout.py  gpi.py  info.py  mem_test.py  noise.py  program.py  record.py  scan.py  set.py  set_parameter.py  statistics.py  sysinfo.py  threads.py
pyjoulescope_driver/test/: test_calibration_hash.py  test_mem_client.py  test_release.py  test_time64.py
src/: CMakeLists.txt  buffer.c  buffer_signal.c  calibration_hash.c  check32.c  cstr.c  devices.c  downsample.c  emu.c  emulated.c  error_code.c  js110_cal.c  js110_sample_processor.c  js110_stats.c  js110_usb.c  js220_i128.c  js220_params.c  js220_stats.c  js220_usb.c  js320_drv.c  js320_fwup.c  js320_fwup_mgr.c  js320_jtag.c  js320_stats.c  jsdrv.c  json.c  log.c  mb_device.c  meta.c  meta_binary.c  pubsub.c  sample_buffer_f32.c  statistics.c  time.c  time_map_filter.c  tmap.c  topic.c  union.c  version.c
src/backend/: posix.c  windows.c
src/backend/libusb/: backend.c  msg_queue.c
src/backend/winusb/: backend.c  device_change_notifier.c  device_change_notifier.h  msg_queue.c
src/devices/js110/: js110_api.h  js110_cal.c  js110_sample_processor.c  js110_stats.c  js110_usb.c
src/devices/js220/: js220_i128.c  js220_stats.c  js220_usb.c
src/devices/js320/: firmware.c  js320_cal.c  js320_cal_mgr.c  js320_drv.c  js320_fwup.c  js320_fwup_mgr.c  js320_jtag.c  js320_stats.c
src/devices/mb_device/: mb_device.c
test/: CMakeLists.txt  buffer_signal_test.c  buffer_test.c  check32_test.c  cstr_test.c  dbc_test.c  downsample_test.c  error_code_test.c  frontend_test.c  js110_cal_test.c  js110_sp_test.c  js220_i128_test.c  js220_stats_test.c  js320_drv_test.c  js320_fwup_mgr_test.c  js320_fwup_test.c  js320_stats_test.c  jsdrv_util.c  json_test.c  log_test.c  meta_binary_test.c  meta_test.c  os_test.c  pubsub_test.c  sample_buffer_f32_test.c  statistics_test.c  test.inc  test_invariant_tmap.c  time_map_filter_test.c  time_test.c  tmap_test.c  topic_test.c  union_test.c  version_test.c
test/devices/js110/: js110_cal_test.c  js110_sp_test.c
test/devices/js220/: js220_i128_test.c  js220_stats_test.c
test/devices/js320/: js320_cal_mgr_test.c  js320_cal_test.c  js320_drv_test.c  js320_fwup_mgr_test.c  js320_fwup_test.c  js320_stats_test.c
test/devices/mb_device/: mb_device_test.c
test/hw/: test_open_state_js320.py
test/jsdrv_util/: demo.c  dev.c  hotplug.c  info.c  jsdrv_util_prv.h  mem_erase.c  mem_read.c  mem_write.c  reset.c  scan.c  set.c  statistics.c  stream_buffer.c  threads.c  version.c
tools/: build.py  embed_js320_firmware.py  power_cycle.py  test_embed_js320_firmware.py  validate_metadata.py
(+35 files in other folders)
